# package-assistant

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
docker/: Dockerfile  settings-archlinux.toml  settings-fedora.toml  settings-tumbleweed.toml  settings-ubuntu.toml
docker/tumbleweed/: Dockerfile  settings.toml
qml/: main.qml
src/: changelog.rs  config.rs  gui.rs  main.rs  package_manager.rs
src/package/: dnf.rs  error.rs  mod.rs  package_manager.rs  utilities.rs  zypper.rs
src/storage/: config.rs  data.rs  error.rs  mod.rs  toml.rs
