[package]
name = "package-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
toml = { version = "0.8.19" }
serde = { version = "1.0.213", features = ["derive"] }
quick-xml = "0.37.0"
rpm = "0.15.1"
regex = "1.11.1"
cxx = { version = "1.0.129", optional = true }
cxx-qt = { version = "0.7.0", optional = true }
cxx-qt-lib = { version = "0.7.0", features = ["qt_gui", "qt_qml"], optional = true }

[build-dependencies]
cxx-qt-build = { version = "0.7.0", optional = true }

[features]
gui = ["dep:cxx", "dep:cxx-qt", "dep:cxx-qt-lib", "dep:cxx-qt-build"]